--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+#====================== Config MySQL Server ======================
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/mobile_shop_api?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=k989898k
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql: true
+server.port=8081
