--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.password=k989898k
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 server.port=8081
+
+#====================== JWT Params ======================
+app.jwtSecret = "supersecurityandsupersupersecurity"
+#1hour
+app.jwtExpiration = 3600000 
